<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StartActivity">

    <Button
        android:id="@+id/play_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/max_score_txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_score"
        android:padding="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/reset_score_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/reset_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_score_txt_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whac_a_mole"
        android:textAllCaps="true"
        android:shadowColor="@color/purple_200"
        android:shadowRadius="20"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@id/play_btn_id"
        android:layout_marginBottom="80sp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/rules_txt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/play_btn_id"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/rules"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/purple_200"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:textAllCaps="true"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_size_of_field"
        app:layout_constraintTop_toBottomOf="@+id/rules_txt_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rules_txt_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50sp">
    <RadioButton
        android:id="@+id/radio_six"
        android:text="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <RadioButton
        android:id="@+id/radio_seven"
        android:text="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true" />
        <RadioButton
            android:id="@+id/radio_eight"
            android:text="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true" />
        <RadioButton
            android:id="@+id/radio_nine"
            android:text="9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true" />

</RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>